# AuthlyX-Rust-Example

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: authlyx.rs  main.rs
