[package]
name = "authlyx-rust-example"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["parsing", "formatting"] }
